--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.2.128:3306/adminlte?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&serverTimezone=GMT
+    url: jdbc:mysql://192.168.2.128:3306/adminlte?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&serverTimezone=GMT%2B8
     username: root
     password: 1234
 
